--- a/funWithWebGl/006/index.html
+++ b/funWithWebGl/006/index.html
@@ -19,18 +19,18 @@
 <script src="Model.js"></script>
 <script src="Primatives.js"></script>
 <script src="Camera.js"></script>
+<script src="Shader_Extra.js"></script>
 <script>
     window.onload = () => {
-        const gl = GLInstance().fSetSize(500, 500).fClear();
+        const gl = GLInstance().fFitScreen().fClear();
 
         const gCamera = new Camera(gl)
         gCamera.transform.position.set(0, 1, 3)
         gCameraCtrl = new CameraController(gl, gCamera)
 
-        const gShader = new TestShader(gl, [0.8,0.8,0.8,   1,0,0,  0,1,0,   0,0,1]); // adding colors
-        gShader.activate().setPerspective(gCamera.projectionMatrix).deactivate(); //push projection to shader
-
-        const gModel = Primatives.GridAxis.createModel(gl, true);
+        // Setup Grid
+        const gGridShader = new GridAxisShader(gl, gCamera.projectionMatrix)
+        const gGridModel = Primatives.GridAxis.createModel(gl, true);
 
         const RLoop = new RenderLoop(onRender).start();
 
@@ -43,9 +43,9 @@
             gCamera.updateViewMatrix();
             gl.fClear();
 
-            gShader.activate()
+            gGridShader.activate()
             .setCameraMatrix(gCamera.viewMatrix)
-            .renderModel(gModel.preRender())
+            .renderModel(gGridModel.preRender())
         }
     }
 
