--- a/funWithWebGl/007/index.html
+++ b/funWithWebGl/007/index.html
@@ -28,20 +28,27 @@
         gCamera.transform.position.set(0, 1, 3)
         gCameraCtrl = new CameraController(gl, gCamera)
 
+        // Setup Quad
+        const gShader = new TestShader(gl, gCamera.projectionMatrix)
+        const gModel = Primatives.Quad.createModel(gl)
+        gModel.setPosition(0, 1, 0).setScale(0.2, 0.2, 0.2)
+
+        const gModel2 = new Model(gl.mMeshCache["Quad"]) // create another, but grab this from the cache
+
         // Setup Grid
         const gGridShader = new GridAxisShader(gl, gCamera.projectionMatrix)
         const gGridModel = Primatives.GridAxis.createModel(gl, true);
 
         const RLoop = new RenderLoop(onRender).start();
 
-        let gPointSize = 0;
-        let angle= 0;
-        const gPointStep = 3;
-        const gAngleStep = (Math.PI / 180.0) * 90; // 90 deg's to radians
-
         function onRender(dt) {
             gCamera.updateViewMatrix();
             gl.fClear();
+
+            gShader.activate()
+            .setCameraMatrix(gCamera.viewMatrix)
+            .renderModel(gModel.preRender())
+            .renderModel(gModel2.preRender())
 
             gGridShader.activate()
             .setCameraMatrix(gCamera.viewMatrix)
@@ -51,14 +58,13 @@
 
 
     class TestShader extends Shader {
-        constructor(gl, aryColor) {
+        constructor(gl, pMatrix) {
             const vertSrc = ShaderUtil.domShaderSrc("vertex_shader")
             const fragSrc = ShaderUtil.domShaderSrc("fragment_shader")
             super(gl, vertSrc, fragSrc)
 
-            const uColor = gl.getUniformLocation(this.program, "uColor") // Not saving this time on the class, just need to set once (hence it's in the constructor)
-            gl.uniform3fv(uColor, aryColor); // this fn() 3 floats vector, just make sure you have 3 float vectors, so 2 colors = 6 floats
-
+            //Standard Uniforms
+            this.setPerspective(pMatrix)
             gl.useProgram(null);
         }
     }
@@ -69,29 +75,29 @@
 </body>
 <script id="vertex_shader" type="x-shader/x-vertex">#version 300 es
     in vec3 a_position;
-    layout(location=4) in float a_color;
+    in vec2 a_uv;
 
-    uniform vec3 uColor[4];
     uniform mat4 uMVMatrix;
     uniform mat4 uCameraMatrix;
     uniform mat4 uPMatrix;
 
-    out lowp vec4 color;
+    out vec2 uv;
 
     void main(void){
-        color = vec4(uColor[ int(a_color)], 1.0);
+        uv = a_uv;
         gl_Position = uPMatrix * uCameraMatrix * uMVMatrix * vec4(a_position, 1.0); // order counts!
     }
 </script>
 
 <script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
     precision mediump float;
-
-    in vec4 color;
+    in vec2 uv;
     out vec4 finalColor;
     
     void main(void) {
-        finalColor = color;
+        //Square Border
+        float c = (uv.x <= 0.1 || uv.x >= 0.9 || uv.y <= 0.1 || uv.y >= 0.9)? 0.0 : 1.0;
+        finalColor = vec4(c,c,c,1.0 - c);
     }
 </script>
 
