get weird with it

--- a/funWithWebGl/009/index.html
+++ b/funWithWebGl/009/index.html
@@ -127,7 +127,8 @@
 
     vec3 warp(vec3 p){
         // return p + 0.2 * abs(cos(uTime*0.002)) * a_norm;
-        return p + 0.5 * abs(cos(uTime*0.003 + p.y)) * a_norm;
+        // return p + 0.5 * abs(cos(uTime*0.003 + p.y)) * a_norm;
+       return p + 0.5 * abs(cos(uTime*0.003 + p.y + p.x + p.z * 2.0)) * a_norm;
     }
 
     void main(void){
