--- a/funWithWebGl/012/index.html
+++ b/funWithWebGl/012/index.html
@@ -42,10 +42,11 @@
             .setTexture(gl.mTextureCache["tex001"])
 
         const gModel = Primatives.Cube.createModel(gl)
-        gModel.setPosition(0, 0.6, 0).setScale(0.2, 0.2, 0.2)
+        gModel.setPosition(0, 0.0, 0)
 
         // const gModel = new Model(ObjLoader.domToMesh(gl, "objCube", "obj_file", true))
         // gModel.setPosition(0,0.6,0).setScale(0.5,0.5,0.5)
+        console.log(gModel)
 
         const RLoop = new RenderLoop(onRender).start();
 
@@ -54,7 +55,7 @@
                     .addPoint(0,0,0,0)
                     .finalize();
         
-        const radius = 1.5
+        const radius = 0.5
         const angleInc = 1
         const yPosInc = 0.2
         let angle = 0
@@ -66,7 +67,10 @@
 
             // This shader rendering order matters.
             // If gShader goes before, the grid can't be seen through. 
-            // We learn how to handle this in a future lesson
+             const x = radius * Math.cos(angle)
+            const z = radius * Math.sin(angle)
+            const y = 0.6 // We learn how to handle this in a future lesson
+            mDebug.transform.position.set(x, y, z)
             gGridShader.activate()
                 .setCameraMatrix(gCamera.viewMatrix)
                 .renderModel(gGridModel.preRender())
@@ -80,12 +84,6 @@
             angle += angleInc * dt
             yPos += yPosInc * dt
         
-            const x = radius * Math.cos(angle)
-            const z = radius * Math.sin(angle)
-            const y = MathUtil.Map(Math.sin(yPos), -1, 1, 0.1, 2)
-
-            mDebug.transform.position.set(x, y, z)
-
             mDebug.render(gCamera)
         }
     }
@@ -134,9 +132,6 @@
             this.uniformLoc.lightpos = gl.getUniformLocation(this.program, "uLightPos")
             this.uniformLoc.campos = gl.getUniformLocation(this.program, "uCamPos")
             this.uniformLoc.matNorm = gl.getUniformLocation(this.program, "uNormMatrix")
-
-            const uColor = gl.getUniformLocation(this.program, "uColor")
-            gl.uniform3fv(uColor, new Float32Array(GlUtil.rgbArray("#FF0000", "00FF00", "0000FF", "909090", "C0C0C0", "404040")));
 
             //Standard Uniforms
             this.setPerspective(pMatrix)
@@ -273,8 +268,8 @@
         //...........................
         //setup specular 
         //NOTE : Might be easier to switch vertexPos, light and camera to local space. Can remove inverse of camera matrix in the process. For prototyping keeping things in WorldSpace.
-        float specularStrength = 0.2f;	//0.15
-        float specularShininess = 1.0f; //256.0
+        float specularStrength = 0.15; //0.2f	//0.15
+        float specularShininess = 256.0; //1.0f //256.0
         vec3 camDir = normalize(vCamPos - vPos);	//Get the camera direction from the fragment position.
         vec3 reflectDir = reflect(-lightDir,vNorm);	//Using the normal as the 45 degree type of pivot, get the reflective direction from the light direction
 
@@ -285,6 +280,7 @@
         //Final
         vec3 finalColor = (cAmbient + cDiffuse + cSpecular) * cBase.rgb; //Combined Light Strength and apply it to the base color
         outColor = vec4(finalColor,1.0);
+        //outColor = vec4(vNorm, 1.0);
     }
 </script>
 
