--- a/funWithWebGl/013/viewer.html
+++ b/funWithWebGl/013/viewer.html
@@ -38,7 +38,7 @@
 
 				//....................................
 				//Load up resources
-				Resources.setup(gl,onReady).loadTexture("tex001","../shared/UV_Grid_Lrg.jpg").start();
+				Resources.setup(gl,onReady).loadTexture("tex001","../assets/test_tex.jpg").start();
 			});
 
 			//==================================================
