Render atlas square onto cube.

--- a/funWithWebGl/015/viewer.html
+++ b/funWithWebGl/015/viewer.html
@@ -39,8 +39,7 @@
 				//....................................
 				//Load up resources
 				Resources.setup(gl,onReady).loadTexture(
-					"mask_a", "mask_square.png",
-					"mask_b", "mask_cornercircles.png"
+					"atlas", "atlas_minecraft.png",
 				).start();
 			});
 
@@ -52,12 +51,12 @@
 					.prepareUniforms("uPMatrix","mat4"
 									,"uMVMatrix","mat4"
 									,"uCameraMatrix","mat4"
-									,"uColors","3fv"
+									,"uFaces","2fv"
 									)
-					.prepareTextures("uMask_A", "mask_a", "uMask_B", "mask_b")
+					.prepareTextures("uAtlas", "atlas")
 					.setUniforms(
 						"uPMatrix",gCamera.projectionMatrix,
-						"uColors", GlUtil.rgbArray("880000", "ff9999")
+						"uFaces", [8,0, 8,0, 8,0, 10,0, 8,0, 9,0] // Front, Back, Left, Bottom, Right, Top
 						);
 
 				gModel = Primatives.Cube.createModal(gl,"Cube",true)
@@ -96,26 +95,28 @@
 		uniform mat4 uPMatrix;
 		uniform mat4 uMVMatrix;
 		uniform mat4 uCameraMatrix;
+		uniform vec2[6] uFaces;
 		out highp vec2 vUV;
+
+		const float size = 1.0/16.0;
 		
 		void main(void){
-			vUV = a_uv;
+			int f = int(a_position.w);
+			float u = uFaces[f].x * size + a_uv.x * size;
+			float v = uFaces[f].y * size + a_uv.y * size;
+			vUV = vec2(u,v);
+
 			gl_Position = uPMatrix * uCameraMatrix * uMVMatrix * vec4(a_position.xyz, 1.0); 
 		}
 	</script>
 	<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
 		precision mediump float;
-		uniform sampler2D uMask_A;
-		uniform sampler2D uMask_B;
-		uniform vec3[2] uColors;
+		uniform sampler2D uAtlas;
 		in highp vec2 vUV;
 		out vec4 outColor;
 
 		void main(void){
-			vec4 mask_a = texture(uMask_A, vUV*4.0)*0.15;
-			vec4 mask_b = texture(uMask_B, vUV*2.0);
-			float c = min(mask_a.r + mask_b.r,1.0);
-			outColor = vec4( mix(uColors[0],uColors[1],c), 1.0);
+			outColor = texture(uAtlas, vUV);
 		}
 	</script>
 </body>
