--- a/funWithWebGl/015/viewer.html
+++ b/funWithWebGl/015/viewer.html
@@ -23,6 +23,7 @@
 		<script>
 			var gl, gRLoop,	gShader, gModel, gCamera, gCameraCtrl;
 			var gGridFloor, mDebugVerts, mDebugLine;
+			const gCubes = [];
 
 			window.addEventListener("load",function(){
 				//....................................
@@ -56,11 +57,19 @@
 					.prepareTextures("uAtlas", "atlas")
 					.setUniforms(
 						"uPMatrix",gCamera.projectionMatrix,
-						"uFaces", [8,0, 8,0, 8,0, 10,0, 8,0, 9,0] // Front, Back, Left, Bottom, Right, Top
+						// "uFaces", [8,0, 8,0, 8,0, 10,0, 8,0, 9,0] // Front, Back, Left, Bottom, Right, Top
 						);
 
-				gModel = Primatives.Cube.createModal(gl,"Cube",true)
-						.setPosition(0,0.6,0);//.setScale(0.7,0.7,0.7);
+				// gModel = Primatives.Cube.createModal(gl,"Cube",true)
+				// 		.setPosition(0,0.6,0);//.setScale(0.7,0.7,0.7);
+
+				const cubemesh = Primatives.Cube.createMesh(gl,"Cube",1,1,1,0,0,0,false);
+				
+				for(var i=0; i < 6; i++){
+					var model = new Modal(cubemesh).setPosition( (i%3)*2 , 0.6 , Math.floor(i/3) * -2);
+					gCubes.push(model);
+				}
+
 
 				//....................................
 				gRLoop.start();
@@ -80,7 +89,19 @@
 				//................................
 				//Draw Out models
 				gShader.preRender("uCameraMatrix",gCamera.viewMatrix)
-					.renderModel(gModel.preRender(),false);
+					// .renderModel(gModel.preRender(),false);
+				const texMap = [
+					[3,0, 3,0, 3,0, 2,0, 3,0, 2,9],			//GrassDirt
+					[4,1, 4,1, 4,1, 5,1, 4,1, 5,1],			//Log
+					[11,1, 10,1, 10,1, 9,1, 10,1, 9,1],		//Chest
+					[7,7, 6,7, 6,7, 6,7, 6,7, 6,6],			//Pumpkin
+					[8,8, 8,8, 8,8, 9,8, 8,8, 9,8],			//WaterMelon
+					[8,0, 8,0, 8,0, 10,0, 8,0, 9,0]			//TNT
+				];
+
+				for(var i=0; i < gCubes.length; i++){
+					gShader.setUniforms("uFaces",texMap[i]).renderModel( gCubes[i].preRender() );
+				}
 			}
 		</script>
 	</head>
