--- a/funWithWebGl/015/viewer.html
+++ b/funWithWebGl/015/viewer.html
@@ -1,110 +1,131 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<style>
-			html,body{margin:0px; padding:0px; width:100%; height:100%;}
-			body{background-color:#404040;}
-			canvas{border:1px solid black;}
-			div{display:flex; width:100%; height:100%; align-items:center; justify-content:center;}
-		</style>
 
-		<script src="gl.js"></script>
-		<script src="Math.js"></script>
-		<script src="Shaders.js"></script>
-		<script src="RenderLoop.js"></script>
-		<script src="Transform.js"></script>
-		<script src="Modal.js"></script>
-		<script src="Primatives.js"></script>
-		<script src="Camera.js"></script>
-		<script src="Debug.js"></script>
-		<script src="GridFloor.js"></script>
-		<script src="Resources.js"></script>
+<head>
+	<style>
+		html,
+		body {
+			margin: 0px;
+			padding: 0px;
+			width: 100%;
+			height: 100%;
+		}
 
-		<script>
-			var gl, gRLoop,	gShader, gModel, gCamera, gCameraCtrl;
-			var gGridFloor, mDebugVerts, mDebugLine;
-			const gCubes = [];
+		body {
+			background-color: #404040;
+		}
 
-			window.addEventListener("load",function(){
-				//....................................
-				//System Setup
-				gl = GLInstance("glcanvas").fFitScreen(0.95,0.9).fClear();
-				
-				gCamera = new Camera(gl);
-				gCamera.transform.position.set(0,1,3);
-				gCameraCtrl = new CameraController(gl,gCamera);
+		canvas {
+			border: 1px solid black;
+		}
 
-				gGridFloor = new GridFloor(gl);
-				gRLoop = new RenderLoop(onRender,30);
+		div {
+			display: flex;
+			width: 100%;
+			height: 100%;
+			align-items: center;
+			justify-content: center;
+		}
+	</style>
 
-				//....................................
-				//Load up resources
-				Resources.setup(gl,onReady).loadTexture(
-					"atlas", "atlas_minecraft.png",
-				).start();
-			});
+	<script src="gl.js"></script>
+	<script src="Math.js"></script>
+	<script src="Shaders.js"></script>
+	<script src="RenderLoop.js"></script>
+	<script src="Transform.js"></script>
+	<script src="Modal.js"></script>
+	<script src="Primatives.js"></script>
+	<script src="Camera.js"></script>
+	<script src="Debug.js"></script>
+	<script src="GridFloor.js"></script>
+	<script src="Resources.js"></script>
 
-			//==================================================
-			//When Main System is setup and all resources are downloaded.
-			function onReady(){
-				//Setup Test Shader, Modal, Meshes
-				gShader = new ShaderBuilder(gl,"vertex_shader","fragment_shader")
-					.prepareUniforms("uPMatrix","mat4"
-									,"uMVMatrix","mat4"
-									,"uCameraMatrix","mat4"
-									,"uFaces","2fv"
-									)
-					.prepareTextures("uAtlas", "atlas")
-					.setUniforms(
-						"uPMatrix",gCamera.projectionMatrix,
-						// "uFaces", [8,0, 8,0, 8,0, 10,0, 8,0, 9,0] // Front, Back, Left, Bottom, Right, Top
-						);
+	<script>
+		var gl, gRLoop, gShader, gModel, gCamera, gCameraCtrl;
+		var gGridFloor, mDebugVerts, mDebugLine;
+		const gCubes = [];
 
-				// gModel = Primatives.Cube.createModal(gl,"Cube",true)
-				// 		.setPosition(0,0.6,0);//.setScale(0.7,0.7,0.7);
+		window.addEventListener("load", function () {
+			//....................................
+			//System Setup
+			gl = GLInstance("glcanvas").fFitScreen(0.95, 0.9).fClear();
 
-				const cubemesh = Primatives.Cube.createMesh(gl,"Cube",1,1,1,0,0,0,false);
-				
-				for(var i=0; i < 6; i++){
-					var model = new Modal(cubemesh).setPosition( (i%3)*2 , 0.6 , Math.floor(i/3) * -2);
-					gCubes.push(model);
-				}
+			gCamera = new Camera(gl);
+			gCamera.transform.position.set(0, 1, 3);
+			gCameraCtrl = new CameraController(gl, gCamera);
 
+			gGridFloor = new GridFloor(gl);
+			gRLoop = new RenderLoop(onRender, 30);
 
-				//....................................
-				gRLoop.start();
-				//onRender(0);
+			//....................................
+			//Load up resources
+			Resources.setup(gl, onReady).loadTexture(
+				"atlas", "atlas_minecraft.png",
+			).start();
+		});
+
+		//==================================================
+		//When Main System is setup and all resources are downloaded.
+		function onReady() {
+			//Setup Test Shader, Modal, Meshes
+			gShader = new ShaderBuilder(gl, "vertex_shader", "fragment_shader")
+				.prepareUniforms("uPMatrix", "mat4"
+					, "uMVMatrix", "mat4"
+					, "uCameraMatrix", "mat4"
+					, "uFaces", "2fv"
+				)
+				.prepareTextures("uAtlas", "atlas")
+				.setUniforms(
+					"uPMatrix", gCamera.projectionMatrix,
+					// "uFaces", [8,0, 8,0, 8,0, 10,0, 8,0, 9,0] // Front, Back, Left, Bottom, Right, Top
+				);
+
+			// gModel = Primatives.Cube.createModal(gl,"Cube",true)
+			// 		.setPosition(0,0.6,0);//.setScale(0.7,0.7,0.7);
+
+			const cubemesh = Primatives.Cube.createMesh(gl, "Cube", 1, 1, 1, 0, 0, 0, false);
+
+			for (var i = 0; i < 6; i++) {
+				var model = new Modal(cubemesh).setPosition((i % 3) * 2, 0.6, Math.floor(i / 3) * -2);
+				gCubes.push(model);
 			}
 
-			//==================================================
-			//Main Render Loop
-			function onRender(dt){
-				//................................
-				//Main Elements to draw to the frame
-				gl.fClear();
 
-				gCamera.updateViewMatrix();
-				gGridFloor.render(gCamera);
+			//....................................
+			gRLoop.start();
+			//onRender(0);
+		}
 
-				//................................
-				//Draw Out models
-				gShader.preRender("uCameraMatrix",gCamera.viewMatrix)
-					// .renderModel(gModel.preRender(),false);
-				const texMap = [
-					[3,0, 3,0, 3,0, 2,0, 3,0, 2,9],			//GrassDirt
-					[4,1, 4,1, 4,1, 5,1, 4,1, 5,1],			//Log
-					[11,1, 10,1, 10,1, 9,1, 10,1, 9,1],		//Chest
-					[7,7, 6,7, 6,7, 6,7, 6,7, 6,6],			//Pumpkin
-					[8,8, 8,8, 8,8, 9,8, 8,8, 9,8],			//WaterMelon
-					[8,0, 8,0, 8,0, 10,0, 8,0, 9,0]			//TNT
-				];
+		//==================================================
+		//Main Render Loop
+		function onRender(dt) {
+			//................................
+			//Main Elements to draw to the frame
+			gl.fClear();
 
-				for(var i=0; i < gCubes.length; i++){
-					gShader.setUniforms("uFaces",texMap[i]).renderModel( gCubes[i].preRender() );
-				}
+			gCamera.updateViewMatrix();
+			gGridFloor.render(gCamera);
+
+			//................................
+			//Draw Out models
+			gShader.preRender("uCameraMatrix", gCamera.viewMatrix)
+			// .renderModel(gModel.preRender(),false);
+			const texMap = [
+				[3, 0, 3, 0, 3, 0, 2, 0, 3, 0, 2, 9],			//GrassDirt
+				[4, 1, 4, 1, 4, 1, 5, 1, 4, 1, 5, 1],			//Log
+				[11, 1, 10, 1, 10, 1, 9, 1, 10, 1, 9, 1],		//Chest
+				[7, 7, 6, 7, 6, 7, 6, 7, 6, 7, 6, 6],			//Pumpkin
+				[8, 8, 8, 8, 8, 8, 9, 8, 8, 8, 9, 8],			//WaterMelon
+				[8, 0, 8, 0, 8, 0, 10, 0, 8, 0, 9, 0]			//TNT
+			];
+
+			for (var i = 0; i < gCubes.length; i++) {
+				gShader.setUniforms("uFaces", texMap[i]).renderModel(gCubes[i].preRender());
 			}
-		</script>
-	</head>
+		}
+	</script>
+</head>
+
 <body>
 	<div><canvas id="glcanvas"></canvas></div>
 
@@ -141,4 +162,5 @@
 		}
 	</script>
 </body>
+
 </html>
