--- a/funWithWebGl/016/viewer.html
+++ b/funWithWebGl/016/viewer.html
@@ -43,7 +43,6 @@
 	<script>
 		var gl, gRLoop, gShader, gModel, gCamera, gCameraCtrl;
 		var gGridFloor, mDebugVerts, mDebugLine;
-		const gCubes = [];
 
 		window.addEventListener("load", function () {
 			//....................................
@@ -59,8 +58,9 @@
 
 			//....................................
 			//Load up resources
+			console.log("hi")
 			Resources.setup(gl, onReady).loadTexture(
-				"atlas", "atlas_minecraft.png",
+				"vid", "shark_3d_360.mp4", "vid"
 			).start();
 		});
 
@@ -74,22 +74,13 @@
 					, "uCameraMatrix", "mat4"
 					, "uFaces", "2fv"
 				)
-				.prepareTextures("uAtlas", "atlas")
+				.prepareTextures("uTex", "vid")
 				.setUniforms(
 					"uPMatrix", gCamera.projectionMatrix,
-					// "uFaces", [8,0, 8,0, 8,0, 10,0, 8,0, 9,0] // Front, Back, Left, Bottom, Right, Top
 				);
 
-			// gModel = Primatives.Cube.createModal(gl,"Cube",true)
-			// 		.setPosition(0,0.6,0);//.setScale(0.7,0.7,0.7);
-
-			const cubemesh = Primatives.Cube.createMesh(gl, "Cube", 1, 1, 1, 0, 0, 0, false);
-
-			for (var i = 0; i < 6; i++) {
-				var model = new Modal(cubemesh).setPosition((i % 3) * 2, 0.6, Math.floor(i / 3) * -2);
-				gCubes.push(model);
-			}
-
+			gModel = Primatives.Cube.createModal(gl,"Cube",true)
+					.setPosition(0,0.6,0);//.setScale(0.7,0.7,0.7);
 
 			//....................................
 			gRLoop.start();
@@ -106,22 +97,13 @@
 			gCamera.updateViewMatrix();
 			gGridFloor.render(gCamera);
 
+			gl.fUpdateTexture("vid", Resources.Videos["vid"],false,true)
+
 			//................................
 			//Draw Out models
 			gShader.preRender("uCameraMatrix", gCamera.viewMatrix)
-			// .renderModel(gModel.preRender(),false);
-			const texMap = [
-				[3, 0, 3, 0, 3, 0, 2, 0, 3, 0, 2, 9],			//GrassDirt
-				[4, 1, 4, 1, 4, 1, 5, 1, 4, 1, 5, 1],			//Log
-				[11, 1, 10, 1, 10, 1, 9, 1, 10, 1, 9, 1],		//Chest
-				[7, 7, 6, 7, 6, 7, 6, 7, 6, 7, 6, 6],			//Pumpkin
-				[8, 8, 8, 8, 8, 8, 9, 8, 8, 8, 9, 8],			//WaterMelon
-				[8, 0, 8, 0, 8, 0, 10, 0, 8, 0, 9, 0]			//TNT
-			];
+			.renderModel(gModel.preRender(),false);
 
-			for (var i = 0; i < gCubes.length; i++) {
-				gShader.setUniforms("uFaces", texMap[i]).renderModel(gCubes[i].preRender());
-			}
 		}
 	</script>
 </head>
@@ -137,28 +119,21 @@
 		uniform mat4 uPMatrix;
 		uniform mat4 uMVMatrix;
 		uniform mat4 uCameraMatrix;
-		uniform vec2[6] uFaces;
 		out highp vec2 vUV;
 
-		const float size = 1.0/16.0;
-		
 		void main(void){
-			int f = int(a_position.w);
-			float u = uFaces[f].x * size + a_uv.x * size;
-			float v = uFaces[f].y * size + a_uv.y * size;
-			vUV = vec2(u,v);
-
+			vUV = vec2(a_uv.x, a_uv.y * 0.5);
 			gl_Position = uPMatrix * uCameraMatrix * uMVMatrix * vec4(a_position.xyz, 1.0); 
 		}
 	</script>
 	<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
 		precision mediump float;
-		uniform sampler2D uAtlas;
+		uniform sampler2D uTex;
 		in highp vec2 vUV;
 		out vec4 outColor;
 
 		void main(void){
-			outColor = texture(uAtlas, vUV);
+			outColor = texture(uTex, vUV);
 		}
 	</script>
 </body>
